--- a/less/content.less
+++ b/less/content.less
@@ -226,6 +226,31 @@
 			margin-right: -10px; 
 		}
 	}
+
+
+	.crm-container,
+	.crm-container-snippet {
+		.crm-section {
+			.label {
+				color: inherit;
+				font-size: 100%;
+				white-space: inherit;
+
+				label {
+					display: inline-block;
+				}
+
+				.crm-marker {
+					float: right;
+					margin-right: -15px;
+				}
+			}
+
+			.content {
+				padding: 5px;
+			}
+		}
+	}
 }
 
 .content-region .block-system .block-panel {
