Fix CiviCRM forms - content padding

--- a/less/content.less
+++ b/less/content.less
@@ -227,27 +227,28 @@
 		}
 	}
 
+	.block-panel {
+		.crm-container,
+		.crm-container-snippet {
+			.crm-section {
+				.label {
+					color: inherit;
+					font-size: 100%;
+					white-space: inherit;
 
-	.crm-container,
-	.crm-container-snippet {
-		.crm-section {
-			.label {
-				color: inherit;
-				font-size: 100%;
-				white-space: inherit;
+					label {
+						display: inline-block;
+					}
 
-				label {
-					display: inline-block;
+					.crm-marker {
+						float: right;
+						margin-right: -15px;
+					}
 				}
 
-				.crm-marker {
-					float: right;
-					margin-right: -15px;
+				.content {
+					padding: 5px;
 				}
-			}
-
-			.content {
-				padding: 5px;
 			}
 		}
 	}
