--- a/less/content.less
+++ b/less/content.less
@@ -144,6 +144,10 @@
 				}
 			}
 
+			td {
+				vertical-align: top;
+			}
+
 			.field-content {
 				h3 {
 					padding-left: 0; // Undoing the 35px padding-left inside fields
