--- a/less/content.less
+++ b/less/content.less
@@ -285,6 +285,8 @@
 
 			clear: left;
 			margin-top: 15px;
+			background-color: @cbf-content-blue;
+			border-color: @cbf-sidebar-blue;
 
 			.addthis_button_facebook {
 				clear: left;
