--- a/css/style.css
+++ b/css/style.css
@@ -7861,12 +7861,14 @@ table .checkbox input[type="checkbox"] {
 .sidebar-2-region .block-panel .crm-container-snippet .crm-section .content {
   padding: 5px;
 }
+.content-region .block-system .block-panel .submitted {
+  padding: 0 10px;
+}
 .content-region .block-system .block-panel .content {
   padding: 10px;
 }
 .content-region .block-system .block-panel .content .field-name-field-date-text {
   font-weight: bold;
-  margin-bottom: 15px;
 }
 .content-region .block-system .block-panel .content .field-name-field-image,
 .content-region .block-system .block-panel .content .field-name-field-series-image {
@@ -7875,12 +7877,27 @@ table .checkbox input[type="checkbox"] {
   width: 50%;
   padding-left: 30px;
   margin-right: 5px;
+  margin-bottom: 15px;
 }
 .content-region .block-system .block-panel .content .field-name-field-image img,
 .content-region .block-system .block-panel .content .field-name-field-series-image img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+.content-region .block-system .block-panel .content .field-name-field-date-text,
+.content-region .block-system .block-panel .content .field-name-field-episode-date,
+.content-region .block-system .block-panel .content .field-name-field-attachment,
+.content-region .block-system .block-panel .content .field-name-body,
+.content-region .block-system .block-panel .content .field-name-field-content,
+.content-region .block-system .block-panel .content .field-name-field-video {
+  margin-bottom: 15px;
+}
+.content-region .block-system .block-panel .content .field-name-field-speakers .field-label,
+.content-region .block-system .block-panel .content .field-name-field-topics .field-label,
+.content-region .block-system .block-panel .content .field-name-field-bible-reference .field-label,
+.content-region .block-system .block-panel .content .field-name-field-episode-date .field-label {
+  width: 24px;
 }
 .content-region .block-system .block-panel .content .field-name-field-addthis {
   min-height: 20px;
