--- a/less/header.less
+++ b/less/header.less
@@ -157,7 +157,7 @@
 					width: 15%;
 					padding: 8% 0;
 				}
-				@media @tablet {
+				@media @normal {
 					width: 20%;
 					padding: 10% 0;
 				}
