Clear 'both' on the AddThis field, to ensure there is a margin above the field

--- a/less/content.less
+++ b/less/content.less
@@ -305,7 +305,7 @@
 		.field-name-field-addthis {
 			.well;
 
-			clear: left;
+			clear: both;
 			margin-top: 15px;
 			background-color: @cbf-content-blue;
 			border-color: @cbf-sidebar-blue;
