--- a/css/style.css
+++ b/css/style.css
@@ -7927,7 +7927,7 @@ table .checkbox input[type="checkbox"] {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  clear: left;
+  clear: both;
   margin-top: 15px;
   background-color: #d8eaf9;
   border-color: #1a3867;
