--- a/less/footer.less
+++ b/less/footer.less
@@ -1,1 +1,93 @@
-// Insert your styling here.
+.footer {
+	border: 0px;
+	margin-top: 0px;
+
+	.panel {
+		.panel;
+		.panel-variant(@cbf-dark-grey; @cbf-light-grey; @cbf-dark-grey; @cbf-dark-grey);
+
+		color: @cbf-light-grey;
+		background-color: @cbf-dark-grey;
+
+		a {
+			color: @cbf-light-grey;
+		}
+	}
+
+	.region-footer {
+		.make-row();
+
+		li {
+			display: inline-block;
+
+			a {
+				display: inline-block;
+			}
+		}
+
+		#block-menu-menu-footer {
+			.make-xs-column(12);
+			.make-sm-column(7);
+			.make-md-column(8);
+			.make-lg-column(9);
+
+			li {
+				width: 30%;
+
+				a {
+					padding: 10px 5px;
+				}
+			}
+		}
+
+		.social-media {
+			.make-xs-column(12);
+			.make-sm-column(5);
+			.make-md-column(4);
+			.make-lg-column(3);
+
+			li {
+				a {
+					padding: 5px;
+
+					i {
+						font-size: 36px;
+					}
+				}
+
+				a:hover,
+				a:focus {
+					&.facebook-icon {
+						color: #3B5998;
+					}
+					&.twitter-icon {
+						color: #0099CC;
+					}
+					&.youtube-icon {
+						color: #CC181E;
+					}
+					&.vimeo-icon {
+						color: #1ab7ea;
+					}
+					&.googleplus-icon {
+						color: #DD4B39;
+					}
+				}
+			}
+		}
+
+		.seo {
+			.make-xs-column(12);
+			.make-sm-column(7);
+			.make-md-column(8);
+			.make-lg-column(9);
+		}
+
+		.copyright {
+			.make-xs-column(12);
+			.make-sm-column(5);
+			.make-md-column(4);
+			.make-lg-column(3);
+		}
+	}
+}
