--- a/less/content.less
+++ b/less/content.less
@@ -65,11 +65,6 @@
 			a {
 				color: @cbf-dark-blue;
 			}
-
-			&.views-field {
-				margin: 10px 0 0 0;
-				padding-left: 7px;
-			}
 		}
 	}
 
@@ -213,6 +208,11 @@
 
 				&.views-field-taxonomy-vocabulary-1 {
 					font-weight: bold;
+				}
+
+				&.more-link {
+					margin: 10px 0 0 0;
+					padding-left: 7px;
 				}
 			}
 
