--- a/less/content.less
+++ b/less/content.less
@@ -206,7 +206,8 @@
 					font-style: italic;
 				}
 
-				&.views-field-taxonomy-vocabulary-1 {
+				&.views-field-taxonomy-vocabulary-1,
+				&.views-field-field-in-activity {
 					font-weight: bold;
 				}
 
@@ -271,7 +272,8 @@
 	.content {
 		padding: 10px;
 
-		.field-name-field-date-text {
+		.field-name-field-date-text,
+		.views-field-field-in-activity {
 			font-weight: bold;
 		}
 
