--- a/less/content.less
+++ b/less/content.less
@@ -291,6 +291,7 @@
 			}
 		}
 
+		.field-name-field-in-activity,
 		.field-name-field-date-text,
 		.field-name-field-episode-date,
 		.field-name-field-attachment,
