--- a/less/content.less
+++ b/less/content.less
@@ -301,6 +301,11 @@
 			margin-bottom: 15px;
 		}
 
+		.field-name-field-in-activity + .field-name-field-date-text
+		{
+			margin-top: -15px;
+		}
+
 		.field-name-field-speakers,
 		.field-name-field-topics,
 		.field-name-field-bible-reference,
