--- a/css/style.css
+++ b/css/style.css
@@ -7959,6 +7959,52 @@ table .checkbox input[type="checkbox"] {
 .content-region .block-system .block-panel .content .field-name-field-addthis .addthis_button_facebook {
   clear: left;
 }
+.content-region .block-system .block-panel .content .stack {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+.content-region .block-system .block-panel .content .stack:before,
+.content-region .block-system .block-panel .content .stack:after {
+  content: " ";
+  display: table;
+}
+.content-region .block-system .block-panel .content .stack:after {
+  clear: both;
+}
+.content-region .block-system .block-panel .content .stack:before,
+.content-region .block-system .block-panel .content .stack:after {
+  content: " ";
+  display: table;
+}
+.content-region .block-system .block-panel .content .stack:after {
+  clear: both;
+}
+.content-region .block-system .block-panel .content .stack .box {
+  float: left;
+  width: 100%;
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 768px) {
+  .content-region .block-system .block-panel .content .stack .box {
+    float: left;
+    width: 100%;
+  }
+}
+@media (min-width: 992px) {
+  .content-region .block-system .block-panel .content .stack .box {
+    float: left;
+    width: 50%;
+  }
+}
+@media (min-width: 1200px) {
+  .content-region .block-system .block-panel .content .stack .box {
+    float: left;
+    width: 50%;
+  }
+}
 .content-region .block-system .block-panel .profile .user-picture {
   float: right;
   margin-left: 10px;
