--- a/less/content.less
+++ b/less/content.less
@@ -327,6 +327,17 @@
 				clear: left;
 			}
 		}
+
+		.stack {
+			.make-row();
+
+			.box {
+				.make-xs-column(12);
+				.make-sm-column(12);
+				.make-md-column(6);
+				.make-lg-column(6);
+			}
+		}
 	}
 
 	.profile {
