--- a/less/content.less
+++ b/less/content.less
@@ -272,6 +272,20 @@
 	.content {
 		padding: 10px;
 
+		.field-name-field-civievent {
+			.badge;
+
+			font-size: @font-size-h1;
+			background-color: @cbf-light-blue;
+			float: right;
+			margin-right: 5px;
+			padding: 5px 30px;
+
+			a {
+				color: white;
+			}
+		}
+
 		.field-name-field-date-text,
 		.field-name-field-in-activity {
 			font-weight: bold;
@@ -288,6 +302,8 @@
 
 			img {
 				.img-responsive;
+
+				float: right;
 			}
 		}
 
