--- a/less/content.less
+++ b/less/content.less
@@ -211,6 +211,14 @@
 					font-weight: bold;
 				}
 
+				&.views-field-field-campus-find-us {
+					i {
+						margin-left: -70px;
+						width: 70px;
+						font-size: 18px;
+					}
+				}
+
 				&.more-link {
 					margin: 10px 0 0 0;
 					padding-left: 7px;
